--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,10 @@ PORT=4000
 ACCESS_TOKEN=ACCESS_TOKEN
 REFRESH_TOKEN=REFRESH_TOKEN
 
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_DB=db
+
 REDIS_URL=redis://localhost:6379
 
 S3_ACCESS_KEY=S3_ACCESS_KEY
