--- a/package.json
+++ b/package.json
@@ -42,11 +42,13 @@
     "cookie-parser": "^1.4.7",
     "event-emitter": "^0.3.5",
     "express-fileupload": "^1.5.1",
+    "json2csv": "^6.0.0-alpha.2",
     "multer": "1.4.5-lts.1",
     "nestjs-s3": "^2.0.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "pdfkit": "^0.16.0",
     "redis": "^4.7.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
