--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nestjs/swagger": "^11.0.3",
     "@nestjs/websockets": "^11.0.11",
     "@prisma/client": "^6.3.1",
+    "archiver": "^7.0.1",
     "axios": "^1.7.9",
     "bcryptjs": "^3.0.2",
     "cache-manager": "^6.4.1",
