--- a/package.json
+++ b/package.json
@@ -30,8 +30,9 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.9",
+    "@nestjs/platform-socket.io": "^11.0.12",
     "@nestjs/swagger": "^11.0.3",
-    "@nestjs/websockets": "^11.0.11",
+    "@nestjs/websockets": "^11.0.12",
     "@prisma/client": "^6.3.1",
     "archiver": "^7.0.1",
     "axios": "^1.7.9",
